Update NL translations

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -30,6 +30,16 @@
     "Sign in": "Inloggen",
     "Continue": "Doorgaan",
     "Already have an account? ": "Heb je al een account?",
+    "Your subscription will expire on {date current_period_end format='DD MMM YYYY'}": "Jouw inschrijving vervalt op {date current_period_end format='DD MMM YYYY'}",
+    "Hey! You have an active {blogtitle} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing.": "Hey! Je hebt een actieve {blogtitle} account met toegang tot alle artikels. Laat het me zeker weten, mocht je problemen ondervinden en bedankt voor je inschrijving.",
+    "Email address": "E-mailadres",
+    "Your plan": "Jouw plan",
+    "Card": "Kaart",
+    "Expires": "Vervalt",
+    "Next bill date": "Volgende geplande betaling",
+    "Currently, you're not a subscriber": "Momenteel ben je geen lid",
+    "Hey there!": "Hey",
+    "is subscribed to free updates from {blogtitle}, but doesn't have a paid subscription to unlock full access.": "is ingeschreven voor gratis updates van {blogtitle}, maar heeft geen betalend lidmaatschap om volledige toegang te verkrijgen.", 
     "Subscribed!": "Ingeschreven!",
     "with the email address": "met e-mailadres",
     "Your email address": "Jouw e-mailadres",
