--- a/locales/en.json
+++ b/locales/en.json
@@ -30,6 +30,16 @@
     "Sign in": "Sign in",
     "Continue": "Continue",
     "Already have an account? ": "Already have an account?",
+    "Your subscription will expire on {date current_period_end format='DD MMM YYYY'}": "Your subscription will expire on {date current_period_end format='DD MMM YYYY'}",
+    "Hey! You have an active {blogtitle} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing.": "Hey! You have an active {blogtitle} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing.",
+    "Email address": "Email address",
+    "Your plan": "Your plan",
+    "Card": "Card",
+    "Expires": "Expires",
+    "Next bill date": "Next bill date",
+    "Currently, you're not a subscriber": "Currently, you're not a subscriber",
+    "Hey there!": "Hey there!",
+    "is subscribed to free updates from {blogtitle}, but doesn't have a paid subscription to unlock full access.": "is subscribed to free updates from {blogtitle}, but doesn't have a paid subscription to unlock full access.",
     "Subscribed!": "Subscribed!",
     "with the email address": "with the email address",
     "Your email address": "Your email address",
