Fix check inbox messages

--- a/locales/en.json
+++ b/locales/en.json
@@ -54,6 +54,8 @@
     "Success! Your account is fully activated, you now have access to all content.": "Success! Your account is fully activated, you now have access to all content.",
     "Great!": "Great!",
     "Free Post": "Free Post",
+    "Check your inbox and click the link to confirm your subscription": "Check your inbox and click the link to confirm your subscription",
+    "Check your inbox and click the link to complete signin": "Check your inbox and click the link to complete signin",
     "Check your inbox and click the link to confirm your subscription.": "Check your inbox and click the link to confirm your subscription.",
     "Please enter a valid email address!": "Please enter a valid email address!",
     "A collection of posts": "A collection of posts",
