--- a/locales/nl.json
+++ b/locales/nl.json
@@ -39,7 +39,7 @@
     "Next bill date": "Volgende geplande betaling",
     "Currently, you're not a subscriber": "Momenteel ben je geen lid",
     "Hey there!": "Hey",
-    "is subscribed to free updates from {blogtitle}, but doesn't have a paid subscription to unlock full access.": "is ingeschreven voor gratis updates van {blogtitle}, maar heeft geen betalend lidmaatschap om volledige toegang te verkrijgen.", 
+    "is subscribed to free updates from {blogtitle}, but doesn't have a paid subscription to unlock full access.": "is ingeschreven voor gratis updates van {blogtitle}, maar heeft geen betalend lidmaatschap om volledige toegang te verkrijgen.",
     "Subscribed!": "Ingeschreven!",
     "with the email address": "met e-mailadres",
     "Your email address": "Jouw e-mailadres",
@@ -54,6 +54,8 @@
     "Success! Your account is fully activated, you now have access to all content.": "Succes! Jouw account is volledig geactiveerd. Je hebt nu toegang tot alle inhoud.",
     "Great!": "Top!",
     "Free Post": "Gratis Artikel",
+    "Check your inbox and click the link to confirm your subscription": "Controleer jouw inbox en klik op de link om je inschrijving te bevestigen",
+    "Check your inbox and click the link to complete signin": "Controleer jouw inbox om klik op de link om in te loggen",
     "Check your inbox and click the link to confirm your subscription.": "Controleer jouw inbox en bevestig jouw inschrijving.",
     "Please enter a valid email address!": "Gelieve een correct e-mailadres in te vullen",
     "A collection of posts": "Een collectie van artikels",
