--- a/locales/en.json
+++ b/locales/en.json
@@ -34,6 +34,7 @@
     "Hey! You have an active {blogtitle} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing.": "Hey! You have an active {blogtitle} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing.",
     "Email address": "Email address",
     "Your plan": "Your plan",
+    "Your account": "Your account",
     "Card": "Card",
     "Expires": "Expires",
     "Next bill date": "Next bill date",
