--- a/locales/nl.json
+++ b/locales/nl.json
@@ -34,6 +34,7 @@
     "Hey! You have an active {blogtitle} account with access to all areas. Get in touch if have any problems or need some help getting things updated, and thanks for subscribing.": "Hey! Je hebt een actieve {blogtitle} account met toegang tot alle artikels. Laat het me zeker weten, mocht je problemen ondervinden en bedankt voor je inschrijving.",
     "Email address": "E-mailadres",
     "Your plan": "Jouw plan",
+    "Your account": "Jouw account",
     "Card": "Kaart",
     "Expires": "Vervalt",
     "Next bill date": "Volgende geplande betaling",
