--- a/locales/nl.json
+++ b/locales/nl.json
@@ -6,7 +6,7 @@
     "Page {page} of {pages}": "Pagina {page} van {pages}",
     "Subscribe": "Inschrijven",
     "Subscribe now": "Nu inschrijven",
-    "You don't have access to this post on <strong>{blogtitle}</strong> at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access.": "Je hebt geen toegang tot dit artikel op <strong>{blogtitle}</strong> op dit moment, maar als je jouw account upgrade zal je het volledig kunnen lezen en krijg je toegang tot het volledige archief voor leden! Inschrijven duurt slechts een paar seconden en je krijgt onmiddellijk toegang.",
+    "You don't have access to this post on {blogtitle} at the moment, but if you upgrade your account you'll be able to see the whole thing, as well as all the other posts in the archive! Subscribing only takes a few seconds and will give you immediate access.": "Je hebt geen toegang tot dit artikel op {blogtitle} op dit moment, maar als je jouw account upgrade zal je het volledig kunnen lezen en krijg je toegang tot het volledige archief voor leden! Inschrijven duurt slechts een paar seconden en je krijgt onmiddellijk toegang.",
     "This post is for paying subscribers only": "Deze post is enkel voor betalende leden",
     "This post is for subscribers only": "Deze post is enkel voor leden",
     "Choose your subscription": "Kies jouw inschrijving",
