Don't show signup plan

--- a/locales/nl.json
+++ b/locales/nl.json
@@ -47,6 +47,7 @@
     "You've successfully subscribed to": "Je bent met succes ingeschreven bij",
     "You've successfully subscribed to {blogtitle}": "Je bent met succes ingeschreven bij {blogtitle}",
     "Great! Next, complete checkout for full access to {blogtitle}": "Top! Vervolledig je aankoop voor volledige toegang tot {blogtitle}",
+    "Great! You are now subscribed to {blogtitle}": "Top! Je bent nu ingeschreven bij {blogtitle}",
     "Welcome back! You've successfully signed in": "Welkom terug! Je bent met succes ingelogd",
     "Welcome back!": "Welkom terug!",
     "Sign into your account again for full access": "Log in om opnieuw volledige toegang te krijgen",
