--- a/locales/en.json
+++ b/locales/en.json
@@ -47,6 +47,7 @@
     "You've successfully subscribed to": "You've successfully subscribed to",
     "You've successfully subscribed to {blogtitle}": "You've successfully subscribed to {blogtitle}",
     "Great! Next, complete checkout for full access to {blogtitle}": "Great! Next, complete checkout for full access to {blogtitle}",
+    "Great! You are now subscribed to {blogtitle}": "Great! You are now subscribed to {blogtitle}",
     "Welcome back! You've successfully signed in": "Welcome back! You've successfully signed in",
     "Welcome back!": "Welcome back!",
     "Sign into your account again for full access": "Sign into your account again for full access",
