Remove subscribe button from account page

--- a/locales/en.json
+++ b/locales/en.json
@@ -48,6 +48,8 @@
     "You've successfully subscribed to {blogtitle}": "You've successfully subscribed to {blogtitle}",
     "Great! Next, complete checkout for full access to {blogtitle}": "Great! Next, complete checkout for full access to {blogtitle}",
     "Great! You are now subscribed to {blogtitle}": "Great! You are now subscribed to {blogtitle}",
+    "You've succesfully subscribed to {blogtitle}!": "You've succesfully subscribed to {blogtitle}!",
+    "is succesfully subscribed to {blogtitle} and will receive e-mails when new articles are published.": "is succesfully subscribed to {blogtitle} and will receive e-mails when new articles are published.",
     "Welcome back! You've successfully signed in": "Welcome back! You've successfully signed in",
     "Welcome back!": "Welcome back!",
     "Sign into your account again for full access": "Sign into your account again for full access",
