--- a/locales/nl.json
+++ b/locales/nl.json
@@ -39,7 +39,8 @@
     "Expires": "Vervalt",
     "Next bill date": "Volgende geplande betaling",
     "Currently, you're not a subscriber": "Momenteel ben je geen lid",
-    "Hey there!": "Hey",
+    "Hey there!": "Hallo!",
+    "is succesfully subscribed to {blogtitle} and will receive e-mails when new articles are published.": "is met succes ingeschreven bij {blogtitle} en zal e-mails ontvangen wanneer nieuwe artikels gepubliceerd worden.",
     "is subscribed to free updates from {blogtitle}, but doesn't have a paid subscription to unlock full access.": "is ingeschreven voor gratis updates van {blogtitle}, maar heeft geen betalend lidmaatschap om volledige toegang te verkrijgen.",
     "Subscribed!": "Ingeschreven!",
     "with the email address": "met e-mailadres",
@@ -48,6 +49,7 @@
     "You've successfully subscribed to {blogtitle}": "Je bent met succes ingeschreven bij {blogtitle}",
     "Great! Next, complete checkout for full access to {blogtitle}": "Top! Vervolledig je aankoop voor volledige toegang tot {blogtitle}",
     "Great! You are now subscribed to {blogtitle}": "Top! Je bent nu ingeschreven bij {blogtitle}",
+    "You've succesfully subscribed to {blogtitle}!": "Je bent met succes ingeschreven bij {blogtitle}!",
     "Welcome back! You've successfully signed in": "Welkom terug! Je bent met succes ingelogd",
     "Welcome back!": "Welkom terug!",
     "Sign into your account again for full access": "Log in om opnieuw volledige toegang te krijgen",
